--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">LabAssignment5</string>
+    <string name="app_name">"Lab5 M18 - JHL &amp; KM"</string>
+	<string name="title_activity_maps">Map</string>
 </resources>
