--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,20 @@
 <resources>
-	<string name="app_name">"Lab5 M18 - JHL &amp; KM"</string>
-	<string name="title_activity_maps">Map</string>
+	<string name="app_name">"JHL &amp; KM's Restaurant Finder"</string>
+	<string name="title_activity_maps">"Restaurant Location"</string>
 
 	<!--main activity-->
 	<string name="main_instructions_header_lbl">"JHL &amp; KM\'s\nRestaurant Finder (っ˘ڡ˘ς)"</string>
-	<string name="main_instructions_body_txt">"Are you new to Toronto?\n\nDo you have an insatiable palate that cannot be satisfied by plebeian grub?\n\nDo you have an unquenchable thirst for juicies to seep through your dark cavities?\n\nIf you answered yes to any of the questions above, you are in the right place ♪♪ ヽ(ˇ∀ˇ )ゞ!\n\nThis application will show you a list of restaurants found in Toronto, ON, Canada, based upon the type of cuisine you select on the next screen.\n\nNow that we have your attention, let us begin without further ado!"</string>
+	<string name="main_instructions_body_txt">"Are you new to Toronto?\n\nDo you have an insatiable palate that cannot be satisfied by plebeian grub?\n\nDo you have an unquenchable thirst for juices to seep through your dark cavities?\n\nIf you answered yes to any of the questions above, you are in the right place ♪♪ ヽ(ˇ∀ˇ )ゞ!\n\nThis application will show you a list of restaurants found in Toronto, ON, Canada, based upon the type of cuisine you select on the next screen.\n\nNow that we have your attention, let us begin without further ado!"
+	</string>
 	<string name="main_continue_btn_lbl">"Let\'s Go! ヽ(´▽`)/"</string>
-	<string name="main_continue_btn_clicked_txt">"ᕕ( ᐛ )ᕗ"</string>
+	<string name="main_continue_btn_clicked_txt">"Marching onwards ᕕ( ᐛ )ᕗ!"</string>
+
+	<!--cuisine list activity-->
+	<string name="cuisine_list_title">"Cuisines List"</string>
+	<string name="cuisine_list_instructions_txt">Here in Toronto, we may have many delicacies which may not be found anywhere else!\n\nPlease click on one of the following types of cuisines to see the restaurants for that particular cuisine type:</string>
 
 	<!--restaurant list-->
-	<string name="restaurant_list_title">"Lab5 M18 - JHL &amp; KM - Restaurants List"</string>
+	<string name="restaurant_list_title">"Restaurants List"</string>
 	<string name="restaurant_list_show_btn_lbl">"Show"</string>
+	<string name="restaurant_list_instructions_txt"></string>
 </resources>
