--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
 	<string name="restaurant_list_chinese_sel_txt">"给我好吃的 ฅ^•ﻌ•^ฅ"</string>
 	<string name="restaurant_list_indian_sel_txt">"I want to feel the burn tomorrow щ（ﾟДﾟщ）!"</string>
 	<string name="restaurant_list_italian_sel_txt">"Dammi buon appetito ಠ‿ಠ"</string>
+	<string name="toggle_view">Toggle View</string>
 </resources>
